--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,10 +1,15 @@
 :root {
-  --primary-color: #111;
-  --secondary-color: #666;
-  --accent-color: #0070f3;
-  --font-family-base: "Inter", sans-serif;
-  --max-width: 1200px;
+  --font-family-base: "abeezee","Inter", sans-serif;
+  --font-family-titles: "Abhaya Libre", Garamond, serif;
+  --font-family-footer: "Host Grotesk", sans-serif;
+  --primary-text-color: #141615;
 
   --background: #EEEEEE;
+  --footer-background: #000000;
+  --card-background: #D9D9D9;
+  --appointment-background: #585858; /*TODO: Find the actual color with the color dropper*/
 
+  --white: #FFFFFF;
+  --white-text: #FFFFFF;
+  --black: #000000;
 }
