--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,7 @@
   --font-family-titles: "Abhaya Libre", Garamond, serif;
   --font-family-footer: "Host Grotesk", sans-serif;
   --primary-text-color: #141615;
+  --footer-color: #FFFFFF99; 
 
   --background: #EEEEEE;
   --footer-background: #000000;
